2006-01-01  Callum McKenzie  <callum@spooky-possum.org>

	* gtkgridboardthemes.c: New theme: Squares and Diamonds.

	* properties.c (set_selection): Fix the new code so it will work
	when the UI is translated.

2005-12-31  Callum McKenzie  <callum@spooky-possum.org>

	* gataxx.schemas.in:
	* gataxx.c: 
	* gataxx.h: 
	* properties.c:
	* properties.h: 
	* gtkgridboard.c: 
	* gtkgridboard.h:
	* gtkgridboardthemes.c:
	* gtkgridboardthemes.h:
	* Makefile.am: Resurrected theme support. It is all internal
	drawing code for now, image files are no longer supported. There
	is still only one theme, but the framework for new themes - and
	some degree of "inheritance" is there.

2005-10-04  Callum McKenzie  <callum@spooky-possum.org>

	* gataxx.schemas.in: 
	* gataxx.c: 
	* properties.h: 	
	* properties.c: Remove the separate "flip final" option. The final
	flip is performed if animation is requested. Also move the
	PropertiesData definition inside properties.c since it is private.

2005-09-21  Callum McKenzie  <callum@spooky-possum.org>

	* properties.c: 
	* properties.h:
	* gataxx.c:
	* gtkgridboard.h:
	* gtkgridboard.c: Use a simpler, slicker, faster drawing
	style. The selection is now drawn as "ghost pieces" (hence
	simplifying the grid code). The grid option has been removed. The
	drawing engine is back to using a backing store. We now keep track
	of what has changed and only redraw that. Also removed a lot of
	profiling code since the total time is the only really relevant
	bit. The resulting code is now easily fast enough (30ms worst-case
	redraw on my machine). 

2005-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gtkgridboard.c: Yet another revision of the Cairo drawing
	code. I have ditched the pixmaps and now draw everything purely
	through Cairo primitives. Since I am using gradients it is still a
	little slow (200ms on a full board vs. 100ms ideal). Without the
	gradients it is 25ms/frame, but doesn't look right. Nearly there.
